welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:6: error: identifier expected but integer literal found.
var n:Int==0
           ^ColumnByColumn:12: error: ';' expected but '(' found.
	var x:Int==getX()
                       ^