welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
def fonctionTest():Boolean={
	if (getX()==getMondeLargeur && getY==getMondeHauteur){return true}
	else{return false}
}
var n:Int==0
while (fonctionTest()==false){
	ecritMessage(n);
	recule();
	n=n+1
	getX(); getY();
	var x:Int==getX()
	if (getY()==getMondeHauteur()){setPos(x+1, 0)}
	
}
}
